@@ -1,3 +1,8 @@
+2012-06-6 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 1.5-05
+   * man/bayesglm: add predictLM
+   * R/bayesglm: add predict.bayesglm, predictLM to fit with model.matrixBayes
+   
 2012-04-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 1.5-04
    * man/bayesglm: rewrite the description for the option scaled.
